Guardando cambios en proyecto 4

--- a/Proyectos/ux-ui/project-4-uxui.html
+++ b/Proyectos/ux-ui/project-4-uxui.html
@@ -10,10 +10,10 @@
   <!-- CSS path to be relative from subfolder -->
   <link rel="stylesheet" href="../../css/styles.css">
 
-   <!-- swiper -->
+  <!-- swiper -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
- 
+
 
 </head>
 
@@ -28,18 +28,19 @@
         </a>
       </div>
 
-       <button class="hamburger-menu" aria-label="Abrir menú de navegación">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </button>
+      <button class="hamburger-menu" aria-label="Abrir menú de navegación">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </button>
 
       <ul class="nav-links">
         <li><a href="../../index.html#about">About</a></li>
         <li><a href="../../index.html#projects">Projects</a></li>
         <li><a href="../../index.html#skills">Skills</a></li>
         <li><a href="../../index.html#contact">Contact</a></li>
-        <li class="profile-toggle-mobile"><button id="profile-toggle-menu" class="profile-toggle">Switch to Textile design</button></li>
+        <li class="profile-toggle-mobile"><button id="profile-toggle-menu" class="profile-toggle">Switch to Textile
+            design</button></li>
       </ul>
       <button id="profile-toggle-desktop" class="profile-toggle">Switch to Textile design</button>
 
@@ -63,130 +64,173 @@
 
     <div class="project-container">
       <section class="project-header">
-        <h1 class="project-title">Arquitecture website design</h1>
+        <h1 class="project-title">SOI Design – Contemporary Architecture Studio
+        </h1>
 
         <div class="project-brief">
           <h2>Brief</h2>
-          <p> Arquitecture website design<br>
-            <b>Arquitecture website design</b> is a unique website Lorem ipsum dolor sit amet consectetur, adipisicing
-            elit. Aliquam eveniet delectus fugiat qui voluptatem omnis, aperiam, accusantium incidunt libero iusto
-            voluptate architecto, voluptates ipsam cumque nulla obcaecati harum similique soluta.
-            Exercitationem quos similique accusantium numquam sed nostrum voluptate magni enim nihil debitis minus,
-            fugiat placeat consequatur, maiores quisquam. Adipisci sunt repellendus unde voluptatibus ipsa nulla maxime
-            nisi! Quos, ipsam error!
-          </p>
+          <p> Contemporary Architecture Studio<br>
+            <strong>SOI Design</strong> needed a website that aligned with its architectural approach: clean,
+            contemporary, and visually grounded. The site had to showcase a portfolio of single-family homes with
+            clarity and precision, and express the studio's identity consistently across all devices and touchpoints.
+
 
           <div class="project-ficha">
-            <div><strong>Timeline:</strong> 4 months</div>
-            <div><strong>Service:</strong> UX/UI - web design </div>
+            <div><strong>Timeline:</strong> 2 months</div>
+            <div><strong>Service:</strong> UX/UI - Web design - Grahic Design </div>
             <div><strong>Role:</strong> Principal Designer</div>
-            <div><strong>Tools:</strong> Figma, Funneltopia, Photoshop, Illustrator, Canva </div>
+            <div><strong>Tools:</strong> Figma, Adobe Portfolio, Photoshop, Illustrator. </div>
           </div>
         </div>
       </section>
     </div>
 
-   
-   <div class="project-media">
+
+    <div class="project-media">
       <div class="project-media img">
-        <img src="../../images/mockup_desktop & mobile.jpg" alt="Proyecto 1" data-lightbox="single" data-title="Final responsive design of my personal portfolio, optimized for desktop and mobile." />
-        <p class="project-caption">Final responsive design of my personal portfolio, optimized for desktop and mobile.
-        </p>
+        <img src="../../images/Soidesign_mockup.png" alt="SoiDesign Mockup" data-lightbox="single"
+          data-title="SoiDesign Mockup" data-title="SoiDesign Mockup" />
+        <p class="project-caption">SoiDesign Mockup</p>
       </div>
 
 
-       <div> 
-      <section class="project-challenge">
-      <h2>The Challenge</h2>
-      <p>Explain the problem you were trying to solve or the opportunity you identified.
-        What were the constraints? Who were the users? What were their needs?</p>
-      </section>
+      <div>
+        <section class="project-challenge">
+          <h2>The Challenge</h2>
+          <p>Design a responsive site that highlights architectural projects without overwhelming the viewer. The main
+            challenge was to keep the experience minimal and content-focused while still imbuing it with personality and
+            a sense of place. </p>
+        </section>
       </div>
 
       <section class="project-process">
-      <h2>The Process</h2>
-      <p>Outline your design process. What research did you conduct? How did you
-        approach the problem? What design decisions did you make along the way?</p>
+        <h2>The Process</h2>
+        <ul>
+          <li>Defined the site architecture: Home, About, Projects, and Contact.</li>
+          <li>Developed a clean layout system and typographic hierarchy that supports readability and visual flow.</li>
+          <li>Designed the branding assets, including logo variations and the color palette, aligning with the studio’s
+            modern, geometric aesthetic.</li>
+          <li>Focused on responsive design, ensuring a seamless experience from desktop to mobile.</li>
+          <li>Highlighted project imagery and structured it into immersive galleries and individual project pages, with
+            brief descriptions and visual documentation.</li>
+        </ul>
       </section>
 
 
       <section class="project-gallery">
-      <h2>Galería</h2>
-      <div class="gallery-grid">
-        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
-        <img src="../../images/thumbnail.jpg" alt="Imagen 1" />
+        <h2>Gallery</h2>
+        <div class="gallery-grid">
+          <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
+            <img src="../../images/thumbnail.jpg" alt="Imagen 1" />
+            <p class="project-caption">Logo variations.</p>
+          </div>
+          <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
+            <img src="../../images/Thumbnail.jpg" alt="Imagen 2" />
+            <p class="project-caption">Logo variations.</p>
+          </div>
+          <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
+            <img src="../../images/thumbnail.jpg" alt="Imagen 3" />
+            <p class="project-caption">Logo variations.</p>
+          </div>
+          <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
+            <img src="../../images/thumbnail.jpg" alt="Imagen 4" />
+            <p class="project-caption">Logo variations.</p>
+          </div>
         </div>
-       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
-       <img src="../../images/Thumbnail.jpg" alt="Imagen 2" />
-       </div>
-       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
-       <img src="../../images/thumbnail.jpg" alt="Imagen 3" />
-       </div>
-       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
-       <img src="../../images/thumbnail.jpg" alt="Imagen 4" />
-       </div>      
-      </div>
       </section>
 
-    <section class="project-result">
+      <section class="project-result">
+        <h2>Visual Direction</h2>
+        <p>The visual identity took cues from architectural elements: proportion, rhythm, balance, and structure.</p>
+      </section>
+
+      <section class="project-gallery">
+        <div class="gallery-grid">
+          <div class="gallery-item" data-lightbox="gallery" data-title="Logo variations.">
+            <img src="../../images/LOGO_SOIDESIGN1.png" alt="Logo variations." />
+            <p class="project-caption">Logo variations.</p>
+          </div>
+          <div class="gallery-item" data-lightbox="gallery" data-title="Final Logos, color palette, button styles.">
+            <img src="../../images/LOGO_SOIDESIGN2.png" alt="Final Logos, color palette, button styles." />
+            <p class="project-caption">Final Logos, color palette, button styles.</p>
+          </div>
+        </div>
+      </section>
+
+
+      <section class="project-result">
         <h2>The Solution</h2>
-      <p>Describe your final design solution in detail. How does it address the initial
-        challenge? What features did you implement and why?</p>
-    </section>
+        <p>I designed a responsive website that brings the studio’s portfolio to life while maintaining a minimalist
+          aesthetic. The layout highlights images and project content without distraction. </p>
+
+        <ul>
+          <li>Reinforce the brandwith a
+            custom logotype system with versatile variations.</li>
+          <li>A refined color palette anchored in burnt orange
+            and neutrals</li>
+          <li>A clear visual hierarchy using modern sans-serif typography.</li>
+        </ul>
+        <P> These elements were consistently applied across the interface, from desktop to mobile views, ensuring a
+          cohesive and elegant user
+          experience.</P>
+</section>
 
       <div class="project-media">
-    <div class="project-media">
-        <img src="../../images/Thumbnail.png" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
-    </div>
-      
-
-    <section class="project-learnings">
-      <h2>Outcomes & Learnings</h2>
-      <p>What were the results of your project? Did it achieve its goals? What did you
-        learn from the process? What would you do differently next time?</p>
-      </section>
+        <div class="project-media">
+          <img src="../../images/Thumbnail.png" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
+        </div>
 
 
-<!--Previous project| back to top | Next project-->
- 
-   <div class="project-navigation-section elegant-clean">
-  <a href="/Proyectos/ux-ui/project-3-uxui.html" class="nav-link">
-    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-left" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-      <polyline points="18 15 12 9 6 15"></polyline>
-    </svg>
-    <span class="nav-text">Previous projects</span>
-  </a>
+        <section class="project-learnings">
+          <h2>Outcomes & Learnings</h2>
+          <p>What were the results of your project? Did it achieve its goals? What did you
+            learn from the process? What would you do differently next time?</p>
+        </section>
 
-  <a href="#" class="back-to-top-link" aria-label="Volver arriba">
-    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon back-to-top-arrow" viewBox="0 0 24 24" fill="none" stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-      <polyline points="18 15 12 9 6 15"></polyline>
-    </svg>
-    <span class="back-to-top-text">Back to top</span>
-  </a>
 
-  <a href="/Proyectos/ux-ui/project-5-uxui.html" class="nav-link">
-    <span class="nav-text">Next project </span>
-    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-right" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-      <polyline points="18 15 12 9 6 15"></polyline>
-    </svg>
-  </a>
-</div>
+        <!--Previous project| back to top | Next project-->
+
+        <div class="project-navigation-section elegant-clean">
+          <a href="/Proyectos/ux-ui/project-3-uxui.html" class="nav-link">
+            <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-left" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+              <polyline points="18 15 12 9 6 15"></polyline>
+            </svg>
+            <span class="nav-text">Previous projects</span>
+          </a>
+
+          <a href="#" class="back-to-top-link" aria-label="Volver arriba">
+            <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon back-to-top-arrow" viewBox="0 0 24 24" fill="none"
+              stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+              <polyline points="18 15 12 9 6 15"></polyline>
+            </svg>
+            <span class="back-to-top-text">Back to top</span>
+          </a>
+
+          <a href="/Proyectos/ux-ui/project-5-uxui.html" class="nav-link">
+            <span class="nav-text">Next project </span>
+            <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-right" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+              <polyline points="18 15 12 9 6 15"></polyline>
+            </svg>
+          </a>
+        </div>
 
   </main>
 
   <!-- Footer with proper structure -->
-  
- <footer class="fade-element" id="footer">
-        <div class="footer-content">
-           <!-- FIXED: Updated navigation links to go back to main page sections -->
-        <ul class="footer-nav-links">
-          <li><a href="../../Index.html#about">About</a></li>
-          <li><a href="../../Index.html#projects">Projects</a></li>
-          <li><a href="../../Index.html#skills">Skills</a></li>
-          <li><a href="../../Index.html#contact">Contact</a></li>
-        </ul>
-            
-         <ul class="footer-social-links">
+
+  <footer class="fade-element" id="footer">
+    <div class="footer-content">
+      <!-- FIXED: Updated navigation links to go back to main page sections -->
+      <ul class="footer-nav-links">
+        <li><a href="../../Index.html#about">About</a></li>
+        <li><a href="../../Index.html#projects">Projects</a></li>
+        <li><a href="../../Index.html#skills">Skills</a></li>
+        <li><a href="../../Index.html#contact">Contact</a></li>
+      </ul>
+
+      <ul class="footer-social-links">
         <li><a href="https://www.behance.net/MalalaSoifer" target="_blank" aria-label="Behance"><i
               class="fab fa-behance"></i></a></li>
         <li><a href="https://www.linkedin.com/in/malalasoifer/?locale=en_US" target="_blank" aria-label="LinkedIn"><i
@@ -196,20 +240,20 @@
         <li><a href="mailto:malalasoifer@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a></li>
       </ul>
 
-            <div class="footer-copyright">
-                <p>&copy; 2025 Malala Soifer. All rights reserved.</p>
-                <p>Designed & Developed by Malala Soifer.</p>
-            </div>
-        </div>
-    </footer>
+      <div class="footer-copyright">
+        <p>&copy; 2025 Malala Soifer. All rights reserved.</p>
+        <p>Designed & Developed by Malala Soifer.</p>
+      </div>
+    </div>
+  </footer>
 
 
 
-   <!-- FIXED: Updated script path to be relative -->
+  <!-- FIXED: Updated script path to be relative -->
   <script src="../../js/script.js"></script>
 
 
- 
+
   <!-- Lightbox -->
   <div id="customLightbox" class="custom-lightbox">
     <div class="lightbox-content">
