Imagen en card project 4

--- a/Index.html
+++ b/Index.html
@@ -118,7 +118,7 @@ Explore my world between digital and textile. UX/UI, illustration, patterns, and
 
         <div class="project-card uxui-project card-4 fade-element">
           <a href="/Proyectos/ux-ui/project-4-uxui.html">
-            <img src="./images/degradado BG_Realistic Laptop WIth Smartphone_2.png" alt="UX/UI Project" class="project-image">
+            <img src="./images/Soidesign_mockup.png" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">Architecture Website Design</h3>
           </a>
         </div>
