Avances en proyecto 4

--- a/Proyectos/ux-ui/project-4-uxui.html
+++ b/Proyectos/ux-ui/project-4-uxui.html
@@ -88,25 +88,26 @@
 
     <div class="project-media">
       <div class="project-media img">
-        <img src="../../images/Soidesign_mockup.png" alt="SoiDesign Mockup" data-lightbox="single"
-          data-title="SoiDesign Mockup" data-title="SoiDesign Mockup" />
-        <p class="project-caption">SoiDesign Mockup</p>
+        <img src="../../images/Soidesign_mockup.png" alt="Responsive homepage mockup" data-lightbox="single"
+          data-title="Responsive homepage mockup" data-title="Responsive homepage mockup" />
+        <p class="project-caption">SResponsive homepage mockup</p>
       </div>
 
 
       <div>
         <section class="project-challenge">
           <h2>The Challenge</h2>
-          <p>Design a responsive site that highlights architectural projects without overwhelming the viewer. The main
-            challenge was to keep the experience minimal and content-focused while still imbuing it with personality and
-            a sense of place. </p>
+          <p>The goal was to design a new portfolio website for SOI Design—an architectural studio with a refined and
+            contemporary vision—that could showcase its projects clearly and effectively, without overwhelming the
+            viewer. The main challenge was to maintain a minimal, content-focused experience while still infusing it
+            with personality and a strong sense of place. </p>
         </section>
       </div>
 
       <section class="project-process">
         <h2>The Process</h2>
         <ul>
-          <li>Defined the site architecture: Home, About, Projects, and Contact.</li>
+          <li>Structured the site around four key sections: Home, About, Projects, and Contact.</li>
           <li>Developed a clean layout system and typographic hierarchy that supports readability and visual flow.</li>
           <li>Designed the branding assets, including logo variations and the color palette, aligning with the studio’s
             modern, geometric aesthetic.</li>
@@ -120,23 +121,39 @@
       <section class="project-gallery">
         <h2>Gallery</h2>
         <div class="gallery-grid">
-          <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
-            <img src="../../images/thumbnail.jpg" alt="Imagen 1" />
-            <p class="project-caption">Logo variations.</p>
+          <div class="gallery-item" data-lightbox="gallery" data-title="Website redesign – Before and Now comparison illustrating improved structure,
+              readability, and visual identity.">
+            <img src="../../images/Before-Now_SoiDesign.png" alt="Website redesign – Before and Now comparison illustrating improved structure,
+              readability, and visual identity." />
+            <p class="project-caption">Website redesign – Before and Now comparison illustrating improved structure,
+              readability, and visual identity.</p>
           </div>
-          <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
-            <img src="../../images/Thumbnail.jpg" alt="Imagen 2" />
-            <p class="project-caption">Logo variations.</p>
+
+          <div class="gallery-item" data-lightbox="gallery"
+            data-title="Project architecture on desktop – From grid-based gallery to individual project view with detailed documentation.">
+            <img src="../../images/Projects_Desktop_SD_Mesa de trabajo 1.png"
+              alt="Project architecture on desktop – From grid-based gallery to individual project view with detailed documentation." />
+            <p class="project-caption">Project architecture on desktop – From grid-based gallery to individual project
+              view with detailed documentation.</p>
           </div>
-          <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
-            <img src="../../images/thumbnail.jpg" alt="Imagen 3" />
-            <p class="project-caption">Logo variations.</p>
+
+          <div class="gallery-item" data-lightbox="gallery"
+            data-title="Mobile-first approach – Optimized content flow and visual hierarchy for small screens.">
+            <img src="../../images/Projects_Mobile_SD-02.png"
+              alt="Mobile-first approach – Optimized content flow and visual hierarchy for small screens." />
+            <p class="project-caption">Mobile-first approach – Optimized content flow and visual hierarchy for small
+              screens.</p>
           </div>
-          <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
-            <img src="../../images/thumbnail.jpg" alt="Imagen 4" />
-            <p class="project-caption">Logo variations.</p>
+
+          <div class="gallery-item" data-lightbox="gallery"
+            data-title="Brand application – Business card design extending the studio's minimalist identity with a QR code for quick access.">
+            <img src="../../images/Tarjetas_SoiDesign.png"
+              alt="Brand application – Business card design extending the studio's minimalist identity with a QR code for quick access." />
+            <p class="project-caption">Brand application – Business card design extending the studio's minimalist
+              identity with a QR code for quick access.</p>
           </div>
         </div>
+
       </section>
 
       <section class="project-result">
@@ -173,7 +190,7 @@
         <P> These elements were consistently applied across the interface, from desktop to mobile views, ensuring a
           cohesive and elegant user
           experience.</P>
-</section>
+      </section>
 
       <div class="project-media">
         <div class="project-media">
