Nuevo video en proyecto 4

--- a/Proyectos/ux-ui/project-4-uxui.html
+++ b/Proyectos/ux-ui/project-4-uxui.html
@@ -193,9 +193,11 @@
       </section>
 
       <div class="project-media">
-        <div class="project-media">
-          <img src="../../images/Thumbnail.png" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
-        </div>
+        <video autoplay muted loop playsinline class="project-video">
+          <source src="../../videos/SD_video.mp4" type="video/mp4">
+          <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
+        </video>
+      </div>
 
 
         <section class="project-learnings">
