--- a/Proyectos/ux-ui/project-4-uxui.html
+++ b/Proyectos/ux-ui/project-4-uxui.html
@@ -90,7 +90,7 @@
       <div class="project-media img">
         <img src="../../images/Soidesign_mockup.png" alt="Responsive homepage mockup" data-lightbox="single"
           data-title="Responsive homepage mockup" data-title="Responsive homepage mockup" />
-        <p class="project-caption">SResponsive homepage mockup</p>
+        <p class="project-caption">Responsive homepage mockup</p>
       </div>
 
 
