Ultimos avances en el proyecto 4

--- a/Proyectos/ux-ui/project-2-uxui.html
+++ b/Proyectos/ux-ui/project-2-uxui.html
@@ -9,6 +9,11 @@
 
   <!-- CSS path to be relative from subfolder -->
   <link rel="stylesheet" href="../../css/styles.css">
+
+  <!-- swiper -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
   
 </head>
 
