GUardando avances en el proyecto 3

--- a/Proyectos/ux-ui/project-3-uxui.html
+++ b/Proyectos/ux-ui/project-3-uxui.html
@@ -109,43 +109,66 @@
 
       <section class="project-process">
         <h2>The Process</h2>
-        <p><strong>Research & Ideation</strong><br>
-          I began with a discovery phase including competitor benchmarking, identifying UX patterns and e-commerce
-          trends. Then I explored quick ideation exercises like Crazy 8s to generate layout and feature ideas rapidly.
 
-        <p><strong>Structure & Flow</strong><br>
-          I mapped the information architecture and crafted user flows to understand core journeys like discovering
-          product stories, and checking out. Then I created low- to mid-fidelity wireframes to
-          refine the layout and test usability.
-
-        <p><strong>Visual Design</strong><br>
+        <p><strong>Moodboard & Visual Identityn</strong><br>
           To shape the aesthetic tone, I developed a mood board—warm, earthy tones combined with organic textures,
           global iconography, and inviting typefaces. I also explored typography, icon sets, and image styles that
           conveyed authenticity.
 
-        <p><strong>High-Fidelity Prototypes</strong><br>
+          <div class="project-media">
+  <img src="../../images/Inspirational moodboard_EE.png" alt="Moodboard visual" />
+  <p class="project-caption">Visual and emotional inspiration for the brand.</p>
+</div>
+
+<div class="project-media">
+  <img src="../../images/Brand style guide_EE.png" alt="Typography and color system" />
+  <p class="project-caption">Typography, colors, and image styles.</p>
+</div>
+
+
+        <p><strong>Structure & Flows</strong><br>
+          I mapped the information architecture and crafted user flows to understand core journeys like discovering
+          product stories, and checking out. Then I created low- to mid-fidelity wireframes to
+          refine the layout and test usability.
+
+          <div class="project-media">
+  <img src="../../images/Site Map_EE.png" alt="Site map" />
+  <p class="project-caption">Site map of the platform</p>
+</div>
+
+<div class="project-media">
+  <img src="../../images/User flow1_EE.png" alt="User flow" />
+  <p class="project-caption">Flow for discovering and buying a product</p>
+</div>
+
+<div class="project-media">
+  <img src="../../images/User flow2_EE.png" alt="Onboarding flow" />
+  <p class="project-caption">Simple onboarding user flow</p>
+</div>
+
+        
+        <p><strong>Wireframes & Ideation</strong><br>
           Finally, I brought the concept to life with high-fidelity designs that showcased real content, responsive
           interactions, and visual storytelling—balancing clarity and charm.</p>
       </section>
 
+      <div class="project-media">
+  <img src="../../images/Low-Fidelity_EE.png" alt="Wireframes" />
+  <p class="project-caption">Early wireframes for homepage, product, and checkout</p>
+</div>
 
-      <section class="project-gallery">
-        <h2>Gallery</h2>
-        <div class="gallery-grid">
-          <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
-            <img src="../../images/Thumbnail.png" alt="Imagen 1" />
-          </div>
-          <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
-            <img src="../../images/Thumbnail.png" alt="Imagen 2" />
-          </div>
-          <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
-            <img src="../../images/Thumbnail.png" alt="Imagen 3" />
-          </div>
-          <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
-            <img src="../../images/Thumbnail.png" alt="Imagen 4" />
-          </div>
-        </div>
-      </section>
+<div class="project-media">
+  <img src="../../images/SketchEE-01.png" alt="Sketches" />
+  <p class="project-caption">Initial layout sketches for structure and storytelling</p>
+</div>
+
+<div class="project-media">
+  <video autoplay muted loop playsinline class="project-video">
+    <source src="../../videos/Mid-fidelity_EE.mp4" type="video/mp4">
+    <p class="fallback-text">This project includes a video, but your browser cannot display it.</p>
+  </video>
+  <p class="project-caption">Mid Fidelity Prototype showing layout and interaction ideas</p>
+</div>
 
 
       <section class="project-result">
@@ -170,7 +193,7 @@
       <div class="project-media">
       <video autoplay muted loop playsinline class="project-video">
       <source src="../../videos/Video_EE.mp4" type="video/mp4">
-      <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
+      <p class="fallback-text">This project includes a video, but your browser cannot display it.</p>
       </video>
       </div>
 
