Guardar work in progress

--- a/Index.html
+++ b/Index.html
@@ -68,6 +68,7 @@ Explore my world between digital and textile. UX/UI, illustration, patterns, and
 
 
 
+
     <!-- About Section -->
     <section class="fade-element" id="about">
       <h2>About Me</h2>
@@ -88,11 +89,16 @@ Explore my world between digital and textile. UX/UI, illustration, patterns, and
     <!-- Projects Section -->
     <section class="fade-element" id="projects">
 
+ <!-- Mensaje Work in Progress para Textile -->
+  <p id="textile-status" class="project-status" style="display:none;">
+    🚧 <strong>Work in Progress</strong><br>
+    This textile project is currently being refined and tested. I’m actively working on enhancing the designs and documenting the process along the way.
+  </p>
 
       <h2>Projects</h2>
       <div class="project-grid">
 
-        <!-- UX/UI Projects -->
+<!-- UX/UI Projects -->
 
         <div class="project-card uxui-project card-1 fade-element">
           <a href="/Proyectos/ux-ui/project-1-uxui.html">
@@ -111,7 +117,7 @@ Explore my world between digital and textile. UX/UI, illustration, patterns, and
 
         <div class="project-card uxui-project card-3 fade-element">
           <a href="/Proyectos/ux-ui/project-3-uxui.html">
-            <img src="./images/Mockup_proyecto3.png" alt="UX/UI Project" class="project-image">
+            <img src="./images/Mockup_EE.png" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">Epicurean Escape</h3>
           </a>
         </div>
@@ -137,9 +143,12 @@ Explore my world between digital and textile. UX/UI, illustration, patterns, and
           </a>
         </div>
 
-        <!-- Textile Projects -->
 
-        <div class="project-card textile-project card-1 fade-element">
+ 
+
+        <!-- Textile Projects -->
+ 
+               <div class="project-card textile-project card-1 fade-element">
           <img src="ruta/al/proyecto-textil.jpg" alt="Textile Project" class="project-image">
           <h3 class="project-title">Colección Floral - Textil</h3>
         </div>
