--- a/Proyectos/ux-ui/project-2-uxui.html
+++ b/Proyectos/ux-ui/project-2-uxui.html
@@ -65,7 +65,14 @@
       <section class="project-header">
         <h1 class="project-title">The Integrity game</h1>
 
-        <div class="project-brief">
+       
+     <div class="project-brief">
+
+<p class="project-status">🚧 <strong>Work in Progress</strong><br>
+    This project is currently in development—focusing on testing and refining the user
+    experience. I'm documenting the journey as I go.
+  </p>  
+           
           <h2>Brief</h2>
           <p> Web Redesign & Blog Revamp.<br>
             <b>The Integrity Game (TIG)</b> is a unique platform where coaches offer services focused
@@ -96,7 +103,7 @@
 </div>
 -->
 
-    <div>
+     <div>
       <section class="project-contribution">
         <h2>My Contribution</h2>
         <ul class="fancy-list">
@@ -150,16 +157,16 @@
       <h2>Galería</h2>
       <div class="gallery-grid">
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
-        <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 1" />
+        <img src="../../images/TIG_Homepage.png" alt="Imagen 1" />
         </div>
        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
-       <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 2" />
+       <img src="../../images/TIG_Homepage.png" alt="Imagen 2" />
        </div>
        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
-       <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 3" />
+       <img src="../../images/TIG_Homepage.png" alt="Imagen 3" />
        </div>
        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
-       <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 4" />
+       <img src="../../images/TIG_Homepage.png" alt="Imagen 4" />
        </div>      
       </div>
       </section>
@@ -173,7 +180,7 @@
 
       <div class="project-media">
     <div class="project-media">
-        <img src="../../images/screenshot The integrity game.jpg" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
+        <img src="../../images/TIG_Homepage.png" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
     </div>
 
       <section class="project-learnings">
