Guardando icono linkedin

--- a/Index.html
+++ b/Index.html
@@ -47,7 +47,16 @@
             <li class="profile-toggle-mobile"><button id="profile-toggle-menu" class="profile-toggle">Switch to Textile design</button></li>
         </ul>
 
+
         <button id="profile-toggle-desktop" class="profile-toggle">Switch to Textile design</button>
+
+        
+        <div class="top-social">
+  <a href="https://www.linkedin.com/in/malalasoifer/" target="_blank" aria-label="LinkedIn">
+    <i class="fab fa-linkedin-in"></i>
+  </a>
+</div>
+
     </nav>
 </header>
   <main>
